# checkers

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  console.cpp  main.cpp  position.cpp  position.hpp  searcher.cpp  searcher.hpp  test.cpp
